--- a/src/fabric-1.20.1/block.definition.yaml
+++ b/src/fabric-1.20.1/block.definition.yaml
@@ -435,5 +435,5 @@ global_templates:
     variables: level=7
     name: "@RESROOT/data/fabric/tags/blocks/mineable/needs_tool_level_7.json"
 
-field_exclusions: [ material, displayFluidOverlay, plantsGrowOn, beaconColorModifier, isLadder, enchantPowerBonus, aiPathNodeType,
+field_exclusions: [ displayFluidOverlay, plantsGrowOn, beaconColorModifier, isLadder, enchantPowerBonus, aiPathNodeType,
                     hasEnergyStorage, isFluidTank, energyInitial, energyCapacity, energyMaxReceive, energyMaxExtract, fluidCapacity, fluidRestrictions, canRedstoneConnect ]
