--- a/src/fabric-1.20.1/generator.yaml
+++ b/src/fabric-1.20.1/generator.yaml
@@ -4,7 +4,8 @@ buildfileversion: 0.83.1
 subversion: 21
 
 import:
-  - datapack-1.19.4
+  - datapack-1.20.1
+  - forge-1.20.1
 
 java_models:
   key: mojmap-1.20.x
