Port to 2023.4 snapshot 2 + Add #500

--- a/src/fabric-1.20.1/armor.definition.yaml
+++ b/src/fabric-1.20.1/armor.definition.yaml
@@ -106,4 +106,4 @@ localizationkeys:
 
 field_exclusions: [ helmetModel, helmetModelPart, helmetModelTexture, bodyModel, bodyModelPart, bodyModelTexture, armsModelPartL,
                     armsModelPartR, leggingsModel, leggingsModelPartL, leggingsModelPartR, leggingsModelTexture, bootsModel,
-                    bootsModelPartL, bootsModelPartR, bootsModelTexture ]
+                    bootsModelPartL, bootsModelPartR, bootsModelTexture, helmetPiglinNeutral, bodyPiglinNeutral, leggingsPiglinNeutral, bootsPiglinNeutral ]
