--- a/src/fabric-1.20.1/item.definition.yaml
+++ b/src/fabric-1.20.1/item.definition.yaml
@@ -13,6 +13,12 @@ templates:
     writer: json
     condition: ["renderType #= 0", "hasToolModel()"]
     name: "@MODASSETSROOT/models/item/@registryname.json"
+  - template: json/rangeditem.json.ftl
+    writer: json
+    condition:
+      - "renderType #= 0"
+      - "hasRangedItemModel()"
+    name: "@MODASSETSROOT/models/item/@registryname.json"
   - template: json/item_cmodel.json.ftl
     writer: json
     condition: "renderType #= 1"
@@ -38,6 +44,12 @@ list_templates:
         condition:
           - "renderType #= 0"
           - "hasToolModel()"
+        name: "@MODASSETSROOT/models/item/@registryname_@itemindex.json"
+      - template: json/rangeditem.json.ftl
+        writer: json
+        condition:
+          - "renderType #= 0"
+          - "hasRangedItemModel()"
         name: "@MODASSETSROOT/models/item/@registryname_@itemindex.json"
       - template: json/item_cmodel.json.ftl
         writer: json
