--- a/src/fabric-1.20.1/plant.definition.yaml
+++ b/src/fabric-1.20.1/plant.definition.yaml
@@ -8,15 +8,15 @@ templates:
 
   # Worldgen
   - template: plant/plantgen.java.ftl
-    condition: doesGenerateInWorld()
+    condition: generateFeature
     name: "@SRCROOT/@BASEPACKAGEPATH/world/features/plants/@NAMEFeature.java"
   - template: plant/configured_plantgen.json.ftl
     writer: json
-    condition: doesGenerateInWorld()
+    condition: generateFeature
     name: "@MODDATAROOT/worldgen/configured_feature/@registryname.json"
   - template: plant/placed_plantgen.json.ftl
     writer: json
-    condition: doesGenerateInWorld()
+    condition: generateFeature
     name: "@MODDATAROOT/worldgen/placed_feature/@registryname.json"
 
   # Plant item template
