--- a/src/fabric-1.20.1/tool.definition.yaml
+++ b/src/fabric-1.20.1/tool.definition.yaml
@@ -15,6 +15,11 @@ templates:
     writer: json
     condition: "renderType #= 1"
     name: "@MODASSETSROOT/models/item/@registryname.json"
+  - template: json/item_model_blocking.json.ftl
+    writer: json
+    condition: "toolType %= Shield"
+    name: "@MODASSETSROOT/models/item/@registryname_0.json"
+
 
 global_templates:
   - template: mixins/fishhookmixin.java.ftl
