Port some forgotten changes + fix several bugs

--- a/src/fabric-1.20.1/recipe.definition.yaml
+++ b/src/fabric-1.20.1/recipe.definition.yaml
@@ -1,7 +1,7 @@
 global_templates:
   - template: elementinits/brewingrecipes.java.ftl
     name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameBrewingRecipes.java"
-    condition: ${w.getRecipesOfType("Brewing")?has_content}
+    condition: "${w.getGElementsOfType('recipe')?filter(e -> e.recipeType = 'Brewing')?size != 0}"
     deleteWhenConditionFalse: true
 
 templates:
