--- a/src/fabric-1.20.1/block.definition.yaml
+++ b/src/fabric-1.20.1/block.definition.yaml
@@ -6,9 +6,6 @@ templates:
     name: "@SRCROOT/@BASEPACKAGEPATH/block/entity/@NAMEBlockEntity.java"
 
   # Worldgen
-  - template: block/oregen.java.ftl
-    condition: generateFeature
-    name: "@SRCROOT/@BASEPACKAGEPATH/world/features/ores/@NAMEFeature.java"
   - template: block/configured_oregen.json.ftl
     writer: json
     condition: generateFeature
@@ -385,22 +382,26 @@ global_templates:
     writer: json
     variables: "type=pickaxe"
     name: "@RESROOT/data/minecraft/tags/blocks/mineable/pickaxe.json"
-    condition: ${w.hasBlocksMineableWith('pickaxe')}
+    condition: "${w.getGElementsOfType('block')?filter(e -> e.destroyTool.equals('pickaxe'))?size != 0}"
+    hidden: true
   - template: block/mineable_tag.json.ftl
     writer: json
     variables: "type=axe"
     name: "@RESROOT/data/minecraft/tags/blocks/mineable/axe.json"
-    condition: ${w.hasBlocksMineableWith('axe')}
+    condition: "${w.getGElementsOfType('block')?filter(e -> e.destroyTool.equals('axe'))?size != 0}"
+    hidden: true
   - template: block/mineable_tag.json.ftl
     writer: json
     variables: "type=shovel"
     name: "@RESROOT/data/minecraft/tags/blocks/mineable/shovel.json"
-    condition: ${w.hasBlocksMineableWith('shovel')}
+    condition: "${w.getGElementsOfType('block')?filter(e -> e.destroyTool.equals('shovel'))?size != 0}"
+    hidden: true
   - template: block/mineable_tag.json.ftl
     writer: json
     variables: "type=hoe"
     name: "@RESROOT/data/minecraft/tags/blocks/mineable/hoe.json"
-    condition: ${w.hasBlocksMineableWith('hoe')}
+    condition: "${w.getGElementsOfType('block')?filter(e -> e.destroyTool.equals('hoe'))?size != 0}"
+    hidden: true
 
   - template: block/mineable_level_tag.json.ftl
     writer: json
