--- a/src/fabric-1.20.1/workspacebase/build.gradle
+++ b/src/fabric-1.20.1/workspacebase/build.gradle
@@ -14,6 +14,7 @@ loom {
     mixin {
         defaultRefmapName = actualmodid + ".refmap.json"
     }
+    accessWidenerPath = file("src/main/resources/${modid}.accesswidener")
 }
 
 dependencies {
@@ -46,12 +47,6 @@ java {
 
 jar {
     from "LICENSE"
-}
-
-loom {
-	mixin {
-		defaultRefmapName = actualmodid + ".refmap.json"
-	}
 }
 
 apply from: 'mcreator.gradle'
