Fix a few things + changelog

--- a/src/fabric-1.20.1/workspacebase/build.gradle
+++ b/src/fabric-1.20.1/workspacebase/build.gradle
@@ -14,7 +14,8 @@ loom {
     mixin {
         defaultRefmapName = actualmodid + ".refmap.json"
     }
-    accessWidenerPath = file("src/main/resources/${modid}.accesswidener")
+    if (file("src/main/resources/${modid}.accesswidener").exists())
+        accessWidenerPath = file("src/main/resources/${modid}.accesswidener")
 }
 
 dependencies {
