Refactor biome generation + Fix #521 (#520)
* Refactor and fix some templates

Refactored mixins, deleted unused yaml properties, fixed item registry bugs

* remove terrablender, add accesswidener, add mixin, add biome surface rules and climate parameters

* Update biomes.java.ftl

* Delete region.java.ftl

* Fix a few things + changelog

---------

Co-authored-by: Goldorion <38427877+Goldorion@users.noreply.github.com>

--- a/src/fabric-1.20.1/workspacebase/build.gradle
+++ b/src/fabric-1.20.1/workspacebase/build.gradle
@@ -14,6 +14,8 @@ loom {
     mixin {
         defaultRefmapName = actualmodid + ".refmap.json"
     }
+    if (file("src/main/resources/${modid}.accesswidener").exists())
+        accessWidenerPath = file("src/main/resources/${modid}.accesswidener")
 }
 
 dependencies {
@@ -46,12 +48,6 @@ java {
 
 jar {
     from "LICENSE"
-}
-
-loom {
-	mixin {
-		defaultRefmapName = actualmodid + ".refmap.json"
-	}
 }
 
 apply from: 'mcreator.gradle'
