--- a/src/fabric-1.20.1/generator.yaml
+++ b/src/fabric-1.20.1/generator.yaml
@@ -1,7 +1,7 @@
 name: Minecraft Fabric for @minecraft - @buildfileversion
 status: experimental
 buildfileversion: 0.83.1
-subversion: 24
+subversion: 25
 
 import:
   - datapack-1.20.1
@@ -72,16 +72,15 @@ base_templates:
 - template: elementinits/sounds.java.ftl
   name: "@SRCROOT/@BASEPACKAGEPATH/init/@JavaModNameSounds.java"
   condition: hasSounds()
-- template: modbase/terrablender.java.ftl
-  name: "@SRCROOT/@BASEPACKAGEPATH/TerraBlenderInit.java"
-  canLock: true
-  condition: ${settings.getMCreatorDependenciesRaw()?seq_contains("terrablender")}
-  deleteWhenConditionFalse: true
+- template: modbase/.accesswidener.ftl
+  writer: file
+  name: "@RESROOT/@modid.accesswidener"
 - template: modbase/mixins.json.ftl
   writer: file
   name: "@RESROOT/@modid.mixins.json"
-  condition: ${w.hasElementsOfBaseType("item")}
-  deleteWhenConditionFalse: true
+  condition_any:
+    - ${w.hasElementsOfBaseType("item")}
+    - ${w.hasElementsOfType("biome")}
 
 sources_setup_tasks:
   - task: copy_models
